--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.5.1",
     "koa-body": "^2.5.0",
     "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-static": "^4.0.3"
   }
 }
