--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa-body": "^2.5.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "koa-static": "^4.0.3"
+    "koa-static": "^4.0.3",
+    "moment-timezone": "^0.5.21"
   }
 }
