--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.3",
+    "moment": "^2.22.2",
     "moment-timezone": "^0.5.21"
   }
 }
